--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,14 @@ ext {
     set('springCloudVersion', "2021.0.1")
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.ead.notification.NotificationApplication'
+        )
+    }
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
